# ilmenit-encounter-rust

./: .gitignore  Cargo.toml  README.md  index.html
src/: draw_encounter.rs  lib.rs  main.rs  main_raylib.rs  main_web_sys.rs  palette_encounter.rs  pallette.rs
tools/: README.md  palette_encounter.py  palette_encounter.rs  palette_microw8.py  palette_microw8.rs
