[package]
name = "ilmenit-encounter-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dependencies.raylib]
version = "5.0.0"
git = "https://github.com/bitten2up/raylib-rs"
branch = "5.0.0"
