[package]
name = "ilmenit-encounter-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
wasm-bindgen = { version = "0.2", optional = true, default-features = false }
web-sys = { version = "0.3", optional = true, features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
console_error_panic_hook = {version = "0.1", optional = true}
console_log = {version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true, features = ["js"] }
raylib = { version = "5.0.0", optional = true, git = "https://github.com/bitten2up/raylib-rs", branch = "5.0.0" }

[features]
default = []
for_raylib = ["raylib"]
for_web_sys = ["getrandom", "wasm-bindgen", "web-sys", "console_error_panic_hook", "console_log"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main_raylib"
path = "src/main_raylib.rs"

[[bin]]
name = "main_web_sys"
path = "src/main_web_sys.rs"
